	* Implemented RTP relaying in 'syd/rtp.cpp' and 'syd/rtp.h'.
2014-06-27 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'syd/lwtag.cpp' where type 8 tags were not
	initialized properly.
2014-06-27 Fred Gleason <fredg@paravelsystems.com>
	* Modified advertising generation routines in 'lwrp.cpp' to
	support multiple sources.
2014-06-27 Fred Gleason <fredg@paravelsystems.com>
	* Changed SWITCHYARD_ROUTING_FILE to
	'/var/cache/aoip/routing.db' in 'syd/config.h'.
2014-06-27 Fred Gleason <fredg@paravelsystems.com>
	* Fixed warning in 'syd/lwsource.cpp'.
	* Disabled strict aliasing warning in 'syd/Makefile.am'.
2014-06-27 Fred Gleason <fredg@paravelsystems.com>
	* Implemented stream collation in 'syd/lwrp.cpp' and
	'syd/lwrp.h'.
2014-06-27 Fred Gleason <fredg@paravelsystems.com>
	* Added code to send immediate advertising updates when
	stream parameters are changed in 'syd/lwrp.cpp'.
2014-06-30 Fred Gleason <fredg@paravelsystems.com>
	* Refactored code into AoIP common and application-specific
	elements.
2014-06-30 Fred Gleason <fredg@paravelsystems.com>
	* Split advertising code from 'common/lwrp_server.cpp' and
	'common/lwrp_server.h' into 'common/adv_server.cpp' and
	'common/adv_server.h'.
2014-06-30 Fred Gleason <fredg@paravelsystems.com>
	* Removed clock code from 'common/lwrp_server.cpp' and
	'common/lwrp_server.h'.
2014-06-30 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the 'IP' command in 'common/lwrp_server.cpp'.
2014-06-30 Fred Gleason <fredg@paravelsystems.com>
	* Added an init script in 'syd/rc.syd.in'.
2014-06-30 Fred Gleason <fredg@paravelsystems.com>
	* Added includes in 'syd/rtp_callback.cpp', 'syd/syd.cpp'
	to fix broken build under Debian 7.
2014-07-01 Fred Gleason <fredg@paravelsystems.com>
	* Added 'astring.cpp' and 'astring.h' to the 'distclean'
	target in 'syd/Makefile.am'.
2014-07-01 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SWITCHYARD_VERSION' define in 'common/config.h'.